--- a/signup.html
+++ b/signup.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Sign Up</h2>
-    <form action="welcome.html">
-        <input type="text" placeholder="Enter Username" required>
-        <input type="password" placeholder="Enter Password" required>
-        <button type="submit">Sign Up</button>
-    </form>
-    <a href="index.html">Back to Home</a>
+    <div class="container">
+        <h2>Sign Up</h2>
+        <form id="signupForm">
+            <input type="text" id="newUsername" placeholder="Create Username" required>
+            <input type="password" id="newPassword" placeholder="Create Password" required>
+            <button type="submit">Sign Up</button>
+        </form>
+        <p>Already have an account? <a href="index.html">Login</a></p>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
