--- a/welcome.html
+++ b/welcome.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Nutrition Tracker</h1>
-    <p>You have successfully logged in.</p>
-    <a href="exit.html" class="button">Logout</a>
+    <div class="container">
+        <h2>Welcome, <span id="user"></span>!</h2>
+        <button id="logoutBtn">Logout</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
+
