--- a/exit.html
+++ b/exit.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodbye</title>
+    <title>Goodbye!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Thank You for Visiting!</h1>
-    <p>We appreciate your time. See you again soon!</p>
-    <a href="index.html" class="button">Go to Home</a>
+    <div class="container">
+        <h2>Thank You for Visiting!</h2>
+        <p>We hope to see you again.</p>
+        <p>Redirecting to login...</p>
+    </div>
+    <script>
+        setTimeout(() => {
+            window.location.href = "index.html";
+        }, 3000);
+    </script>
 </body>
 </html>
