--- a/login.html
+++ b/login.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="welcome.html">
-        <input type="text" placeholder="Enter Username" required>
-        <input type="password" placeholder="Enter Password" required>
-        <button type="submit">Login</button>
-    </form>
-    <a href="index.html">Back to Home</a>
+    <div class="container">
+        <h2>Login</h2>
+        <input type="text" id="loginUsername" placeholder="Enter Username">
+        <input type="password" id="loginPassword" placeholder="Enter Password">
+        <button onclick="login()">Login</button>
+        <p id="errorMsg" style="color: red;"></p> <!-- Error message display -->
+        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
