--- a/exit.html
+++ b/exit.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodbye!</title>
+    <title>Thank You</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="exitPage()">
     <div class="container">
         <h2>Thank You for Visiting!</h2>
-        <p>We hope to see you again.</p>
-        <p>Redirecting to login...</p>
+        <p>We appreciate your time. You will be redirected to the login page shortly.</p>
     </div>
-    <script>
-        setTimeout(() => {
-            window.location.href = "index.html";
-        }, 3000);
-    </script>
+
+    <script src="script.js"></script>
 </body>
 </html>
