--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Signup</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="text" id="username" placeholder="Username" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="signup.html">Sign up</a></p>
+        <h2>Signup</h2>
+        <input type="text" id="signupUsername" placeholder="Enter Username">
+        <input type="password" id="signupPassword" placeholder="Enter Password">
+        <button onclick="signup()">Sign Up</button>
+        <p>Already have an account? <a href="login.html">Login here</a></p>
+        <p id="signupMsg" style="color: green;"></p>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
