--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
         <input type="text" id="loginUsername" placeholder="Enter Username">
         <input type="password" id="loginPassword" placeholder="Enter Password">
         <button onclick="login()">Login</button>
-        <p id="errorMsg" style="color: red;"></p> <!-- Error message display -->
-        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
+        <p id="errorMsg" style="color: red;"></p>
+        <p>Don't have an account? <a href="index.html">Sign up here</a></p>
     </div>
 
     <script src="script.js"></script>
