--- a/welcome.html
+++ b/welcome.html
@@ -6,12 +6,12 @@
     <title>Welcome</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="checkLogin()">
     <div class="container">
-        <h2>Welcome, <span id="user"></span>!</h2>
-        <button id="logoutBtn">Logout</button>
+        <h2>Welcome, <span id="usernameDisplay"></span>!</h2>
+        <button onclick="logout()">Logout</button>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
-
